--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4,12 +4,12 @@ All notable changes to this project will be documented in this file.
 The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
 and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).
 
-## [Unreleased]
-### Added
-- Dialyzer + fixed typespecs - [#33](https://github.com/Ianleeclark/Paseto/pull/33)
-- CI Infrastructure
-- Assorted dep updates
+## [1.3.2] - 11 December 2021
+### Changed
+* Bumping libsalty version to v0.3.0
+* Updating misc deps
+* Upgrading to on-disc dependabot config
 
-## v0.13.1
-### Fixed
-- Added support for OTP-23
+## [1.3.1] - 06 Jun 2019
+### Changed
+* Bump elixir in toolversions and update lockfile
