--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4,6 +4,9 @@ All notable changes to this project will be documented in this file.
 The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
 and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).
 
+### [Unreleased]
+* Updating `:crypto.hmac/3` and `:crypto.hmac/4` calls for OTP 24
+
 ## [1.3.2] - 11 December 2021
 ### Changed
 * Bumping libsalty version to v0.3.0
